--- a/views/details.ejs
+++ b/views/details.ejs
@@ -17,38 +17,44 @@
  
 <body>
     
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
-                <small><br />
-                    <p class="white-text-with-blue-shadow">  </p>
-                </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
-                data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
-            
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
-                    <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
-                    <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
-                    <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
-                    <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
-                </ul>
-            </div>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+    <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
+            <small><br />
+                <p class="white-text-with-blue-shadow">  </p>
+            </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
+            data-bs-target="#navmenu"> <span class="navbar-toggler-icon"></span> </button>
+        
+        <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+                <% if (user) { %>
+                <li>Welcome, <%= user.email %></li>
+                <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
+                <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
+                <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
+                <li class="nav-item"> <a href="/logout" class="nav-link">Log Out</a> </li>
+                <% } else { %>
+
+                <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
+                <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
+                <% } %>
+            </ul>
         </div>
-    </nav>
-    
-    <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
-                    
-                    <p class="lead my-4 white-text-with-red-shadow">  </p> <a
-                        href="scheduleBuilder.html"></a>
-                </div>
-                <section>
+    </div>
+</nav>
+
+<section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
+    <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+            <div>
+                <h1>School of CL<span class="standout2">U</span>E<br /> <span class="text-warning"> </span> </h1>
+                <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                <p class="lead my-4 white-text-with-red-shadow">  </p> <a
+                    href="scheduleBuilder.html"></a>
             </div>
+            <section>
         </div>
-    </section>
+    </div>
+</section>
     <div>
    
         <div class="details content">
