--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,11 +26,18 @@
             
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
+                    <% if (user) { %>
+    
+                    <li class="nav-item"> <a href="/" class="nav-link">Welcome, <%= user.email %></a> </li>
                     <li class="nav-item"> <a href="/" class="nav-link">Home</a> </li>
                     <li class="nav-item"> <a href="/schedule" class="nav-link">Add Course</a> </li>    
                     <li class="nav-item"> <a href="/classes" class="nav-link">Schedule</a> </li>
+                    <li class="nav-item"> <a href="/logout" class="nav-link">Log Out</a> </li>
+                    <% } else { %>
+
                     <li class="nav-item"> <a href="/signup" class="nav-link">Sign Up</a> </li>             
                     <li class="nav-item"> <a href="/login" class="nav-link">Log In</a> </li>
+                    <% } %>
                 </ul>
             </div>
         </div>
@@ -61,36 +68,38 @@
         <button>Log in</button>
     </form>
 <script>
-const form = document.querySelector('form');
-const emailError = document.querySelector('.email.error');
-const passwordError = document.querySelector('.password.error');
+ const form = document.querySelector('form');
+  const emailError = document.querySelector('.email.error');
+  const passwordError = document.querySelector('.password.error');
+
 form.addEventListener('submit',   async  (e) => {
     e.preventDefault();
-    
-    emailError.textContent = ' ';
-    passwordError.textContent = ' ';
-
-        const email = form.email.value;
-        const password = form.password.value;
-
-        try{
-const res = await fetch('/signup', {
-    method: 'POST',
-    body: JSON.stringify({email, password}),
-    headers: {'Content-Type': 'application/json'}
-});
-const data = await res.json();
-if(data.errors){
-   emailError.textContent = data.errors.email;
-    passwordError.textContent = data.errors.password;
-} if (data.user) {
-    location.assign('/');
-}
-        } 
-        catch(err){
-            console.log(err);
-        }
-});
+    // reset errors
+    emailError.textContent = '';
+    passwordError.textContent = '';
+    // get values
+    const email = form.email.value;
+    const password = form.password.value;
+    try {
+      const res = await fetch('/login', { 
+        method: 'POST', 
+        body: JSON.stringify({ email, password }),
+        headers: {'Content-Type': 'application/json'}
+      });
+      const data = await res.json();
+      console.log(data);
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
+      }
+      if (data.user) {
+        location.assign('/');
+      }
+    }
+    catch (err) {
+      console.log(err);
+    }
+  });
 </script> 
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
