--- a/views/mySchedule.ejs
+++ b/views/mySchedule.ejs
@@ -56,7 +56,7 @@
         </div>
     </section>
     <div class="class-content">
-        <h2>All Blogs</h2>
+        <h2>All Classes</h2>
     
         
     <% if (classes.length > 0) { %>
