--- a/views/mySchedule.ejs
+++ b/views/mySchedule.ejs
@@ -68,7 +68,7 @@
         </a>
       <% }) %>
     <% } else { %>
-      <p>There are no blogs to display...</p>
+      <p>There are no classes to display...</p>
     <% } %>
         
       </div>
