--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
 <body>
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> -
+        <div class="container"> <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> 
                 <small><br />
                     <p class="white-text-with-blue-shadow">  </p>
                 </small></a> <button class="navbar-toggler type=botton" data-bs-toggle="collapse"
